# ex_control_msgs

./: CMakeLists.txt  package.xml  readme.md
srv/: GetBoolArray.srv  GetFloat32Array.srv  GetFloat64Array.srv  GetInt16Array.srv  GetInt32Array.srv  GetInt8Array.srv  GetUInt16Array.srv  GetUInt32Array.srv  GetUInt8Array.srv  SetBoolArray.srv  SetFloat32Array.srv  SetFloat64Array.srv  SetInt16Array.srv  SetInt32Array.srv  SetInt8Array.srv  SetUInt16Array.srv  SetUInt32Array.srv  SetUInt8Array.srv
